--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-*******************Good morning*****************
-:wq!
-:wq!
+*******************Good morning hello all, how are you****************
